--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <title>Platzisquare</title>
   <base href="/">
-
+  <!-- sweetalert2 -->
+  <link rel="stylesheet" href="https://npmcdn.com/sweetalert2@4.0.15/dist/sweetalert2.min.css">
+  <script src="https://npmcdn.com/sweetalert2@4.0.15/dist/sweetalert2.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
